# NotionCalFeed

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  example.py  main.py  pyproject.toml  railway.toml  railway.yaml  requirements.txt  run_server.py
.claude/: settings.local.json
app/: __init__.py  config.py  ics_generator.py  main.py  models.py  notion_client.py
