[project]
name = "notioncalfeed"
version = "0.1.0"
description = "Notion ICS Calendar Feed Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ics>=0.7.2",
    "notion-client>=2.5.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[project.scripts]
run-server = "run_server:main"
